--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -1224,4 +1224,60 @@
   year    = {1991},
 }
 
+@Article{朱合华2005地下建筑结构,
+  author  = {朱合华 and 张子新 and 廖少明 and others},
+  title   = {地下建筑结构},
+  journal = {中国建筑工业出版社},
+  year    = {2005},
+}
+
+@Misc{springcloudapigateway,
+  author = {Spring Cloud Gateway},
+  title  = {Spring Cloud Gateway 2.0.0 M5 Reference},
+  year   = {2017},
+  url    = {https://cloud.spring.io/spring-cloud-gateway/},
+}
+
+@Misc{springmvc,
+  author = {Spring},
+  title  = {Web on Servlet Stack},
+  year   = {2017},
+  url    = {https://docs.spring.io/spring/docs/current/spring-framework-reference/web.html},
+}
+
+@Book{fielding2000architectural,
+  title     = {Architectural styles and the design of network-based software architectures},
+  publisher = {University of California, Irvine Doctoral dissertation},
+  year      = {2000},
+  author    = {Fielding, Roy T and Taylor, Richard N},
+}
+
+@Book{newcomer2005understanding,
+  title     = {Understanding SOA with Web services},
+  publisher = {Addison-Wesley},
+  year      = {2005},
+  author    = {Newcomer, Eric and Lomow, Greg},
+}
+
+@Misc{amqp2017,
+  author = {OASIS},
+  title  = {Advanced Message Queuing Protocol},
+  year   = {2017},
+  url    = {https://www.amqp.org/},
+}
+
+@Misc{springboot2017,
+  author = {Pivotal},
+  title  = {Spring Boot},
+  year   = {2017},
+  url    = {https://projects.spring.io/spring-boot/},
+}
+
+@Misc{kafka2017,
+  author = {Apache},
+  title  = {Kafka},
+  year   = {2017},
+  url    = {http://kafka.apache.org/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
