--- a/tex/Cover.tex
+++ b/tex/Cover.tex
@@ -3,7 +3,7 @@
 % 保密文字位置可能有问题，需要到cls文件中调整
 \secretlevel{保密} \secretyear{2}
 
-\ctitle{盾构隧道服役性能评估与预测云服务研究}
+\ctitle{盾构隧道服役性能的评估与预测微服务研究}
 % 按照申请工学学位设计。如有其它需要，请修改相应文字。
 \makeatletter
   \iftongji@doctor
