第四章完成

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -1280,4 +1280,11 @@
   url    = {http://kafka.apache.org/},
 }
 
+@Misc{eureka2017,
+  author = {Netflix},
+  title  = {Service Discovery: Eureka Clients},
+  year   = {2017},
+  url    = {http://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/2.0.0.M5/single/spring-cloud-netflix.html},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
