--- a/tex/Chap1.tex
+++ b/tex/Chap1.tex
@@ -276,7 +276,14 @@ Borrmann和Jubierre（\citeyear{borrmann2013multi}）认为现有的IFC标准无
 
 本文以上海运营地铁盾构隧道为研究对象，研究如何根据已有的监测检测数据，客观定量地评估盾构隧道当前服役性能，且在大量历史数据基础上，对未来某个时间盾构隧道的服役性能作出预测，以及探讨了服役性能评估与预测方法在实际工程中的服务机制。各章节的主要研究内容如下：
 
-todo：各章内容
+第二章参考美国国家公路协会对路面服役性能评估方法，对盾构隧道进行病
+害数据采集，专家打分，和打分结果的回归拟合，得出适合盾构隧道的服役性能指标，建立服役性能指标与相对沉降平均值${sett}_{a}$、平均差异沉降$set{{t}_{d\_a}}$、平均收敛变形率${cov}_{a}$、百环渗漏水面积${d}_{l}$、百环衬砌剥落面积${d}_{s}$、百环裂缝长度${d}_{c}$的定量公式，并采用变权理论对公式进行全寿命期的修正。
+
+第三章研究了适用于盾构隧道沉降预测的自回归滑动平均模型和结构向量时间序列模型，考虑了不同沉降时间序列之间的空间关联性，提供对历史沉降数据的拟合以及未来沉降数据的预测精度，利用单一沉降数据的预测，得出服役性能指标的退化曲线。
+
+第四章采用微服务架构改进传统的单体式应用模块复杂、体量庞大、可扩展性差的问题，研究了盾构隧道服役性能相关的数据服务、服役性能分析服务和有限元分析服务的微服务架构关键技术，包括服务接口标准和网关设计、微服务间的通信模式，服务的管理与发现机制。
+
+第五章
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
 \subsection{技术路线}
