--- a/tex/Chap5.tex
+++ b/tex/Chap5.tex
@@ -5,7 +5,7 @@
 正文描述
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{平台概述}
+\section{工程概述}
 
 正文
 
@@ -13,7 +13,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{数据采集}
+\section{iS3平台介绍}
 
 正文
 
@@ -21,7 +21,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{数据处理}
+\section{服役性能评估与预测微服务}
 
 正文
 
@@ -29,25 +29,10 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{数据表达}
+\section{微服务与iS3平台的集成}
 
 正文
 
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{数据分析}
-
-正文
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{决策服务}
-
-正文
 
 
 
