--- a/thesis.tex
+++ b/thesis.tex
@@ -69,9 +69,9 @@
 \bibliography{ref/ref}
 
 % 附录
-\begin{appendix}
-\input{tex/Appendix}
-\end{appendix}
+% \begin{appendix}
+% \input{tex/Appendix}
+% \end{appendix}
 
 %%% 个人简历
 \input{tex/Resume}
