--- a/tex/Chap1.tex
+++ b/tex/Chap1.tex
@@ -228,7 +228,7 @@ Borrmann和Jubierre（\citeyear{borrmann2013multi}）认为现有的IFC标准无
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.9\textwidth]{chap1/iS3.pdf}
+	\includegraphics[width=1.0\textwidth]{chap1/iS3.pdf}
 	\caption{基础设施智慧服务系统（iS3）概念图}
 	\label{fig:iS3概念图}
 \end{figure}
@@ -283,10 +283,29 @@ Borrmann和Jubierre（\citeyear{borrmann2013multi}）认为现有的IFC标准无
 
 第四章采用微服务架构改进传统的单体式应用模块复杂、体量庞大、可扩展性差的问题，研究了盾构隧道服役性能相关的数据服务、服役性能分析服务和有限元分析服务的微服务架构关键技术，包括服务接口标准和网关设计、微服务间的通信模式，服务的管理与发现机制。
 
-第五章
+第五章以上海地铁盾构隧道为工程依托，介绍了基础设施智慧服务系统（iS3）以及盾构隧道服役性能评估与预测的微服务体系，并在iS3平台上集成微服务架构体系，实现分析功能即服务的概念。
+
+第六章总结了本文的主要研究成果以及相应的结论，并对以后的研究工作提出了展望。 
 
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
 \subsection{技术路线}
 
+本文技术路线如图~\ref{fig:本文技术路线}~所示。
+
+\begin{figure}[htb!]
+    \centering
+    \includegraphics[width=1.0\textwidth]{chap1/process.pdf}
+    \caption{本文技术路线}
+    \label{fig:本文技术路线}
+\end{figure}
+
 %+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++%
 \subsection{主要创新点}
+
+本文主要创新点有：
+
+（1）建立服役性能指标（TSI）与观测变量之间的定量化关系，以及修正TSI公式，使其适用于隧道全寿命周期。
+
+（2）建立考虑沉降空间关联性的结构-向量时间序列模型，并得出服役性能指标的退化模型。
+
+（3）研究和设计了盾构隧道服役性能相关分析功能的微服务框架，具备可扩展性强、独立开发部署和分析功能即服务等优点。
