前四章初稿

--- a/tongjithesis.cls
+++ b/tongjithesis.cls
@@ -93,23 +93,23 @@
   % todo: minor fix of CJKnumb
   \def\CJK@null{\kern\CJKnullspace\Unicode{48}{7}\kern\CJKnullspace}
   \defaultfontfeatures{Mapping=tex-text} % after fontspec
-  % \setCJKmainfont{FandolSong}%{Noto Serif CJK SC} 
-  % \setCJKsansfont{FandolHei}%{Noto Sans CJK SC Regular}
-  % \setCJKmonofont{FandolKai}
-  % \setCJKfamilyfont{song}{FandolSong}
-  % \setCJKfamilyfont{hei}{FandolHei}
-  % \setCJKfamilyfont{fs}{FandolFang}
-  % \setCJKfamilyfont{kai}{FandolKai}
+  \setCJKmainfont{FandolSong}%{Noto Serif CJK SC} 
+  \setCJKsansfont{FandolHei}%{Noto Sans CJK SC Regular}
+  \setCJKmonofont{FandolKai}
+  \setCJKfamilyfont{song}{FandolSong}
+  \setCJKfamilyfont{hei}{FandolHei}
+  \setCJKfamilyfont{fs}{FandolFang}
+  \setCJKfamilyfont{kai}{FandolKai}
 
   % For Windows users, the default font can be used
-  \setCJKmainfont{SimSun}%{Noto Serif CJK SC} 
-  \setCJKsansfont{SimHei}%{Noto Sans CJK SC Regular}
-  \setCJKmonofont{KaiTi}
-  \setCJKfamilyfont{song}{SimSun}
-  \setCJKfamilyfont{hei}{SimHei}
-  \setCJKfamilyfont{fs}{FangSong}
-  \setCJKfamilyfont{kai}{KaiTi}
-
+  % \setCJKmainfont{SimSun}%{Noto Serif CJK SC} 
+  % \setCJKsansfont{SimHei}%{Noto Sans CJK SC Regular}
+  % \setCJKmonofont{KaiTi}
+  % \setCJKfamilyfont{song}{SimSun}
+  % \setCJKfamilyfont{hei}{SimHei}
+  % \setCJKfamilyfont{fs}{FangSong}
+  % \setCJKfamilyfont{kai}{KaiTi}
+  
   % For Mac users, the default font can be used
   % \setCJKmainfont{STSong}
   % \setCJKsansfont{STHeiti}
@@ -424,6 +424,7 @@
   \def\tongji@title@font{\sffamily}
 \fi
 \renewcommand\chapter{\if@openright\cleardoublepage\else\clearpage\fi\phantomsection%
+                    \cleardoublepage
                     \thispagestyle{tongji@headings}%
                     \global\@topnum\z@%
                     \@afterindenttrue%
@@ -509,6 +510,7 @@
   \setcounter{tocdepth}{3}
 \fi
 \renewcommand\tableofcontents{%
+  \cleardoublepage % always openright for Abstract
   \tongji@chapter*[]{\lcontentsname}[\contentsname]
   \thispagestyle{tongji@cabstractheadings}   % edited by wildwolf 20090109
   \pagestyle{tongji@cabstractheadings}   % edited by wildwolf 20090109
@@ -786,7 +788,7 @@
     \setlength{\topsep}{0pt} % 标签与上文的间距
    }}{\end{list}}
 \newenvironment{ack}{%
-     % \cleardoublepage
+    \cleardoublepage
     \tongji@chapter*[\tongji@acklongname]{\tongji@ackname}[\tongji@acklongname]
   \thispagestyle{tongji@cabstractheadings} 
   \pagestyle{tongji@cabstractheadings}  
@@ -821,6 +823,7 @@
 \def\tongjimasterbib{\iftongji@doctor [dissertation]\else [Master Thesis]\fi} 
 \def\tongjiphdbib{\iftongji@doctor [dissertation]\else [Doctor Thesis]\fi} 
 \renewenvironment{thebibliography}[1]{%
+   \cleardoublepage
    \tongji@chapter*{\bibname}%
    \thispagestyle{tongji@cabstractheadings} 
    \pagestyle{tongji@cabstractheadings}  
@@ -852,7 +855,7 @@
   \pagestyle{tongji@cabstractheadings}  
   }{}
 \newenvironment{resume}{%
-  % \cleardoublepage
+  \cleardoublepage
   \tongji@chapter*{\tongji@resume@title}
   \thispagestyle{tongji@cabstractheadings} 
   \pagestyle{tongji@cabstractheadings}  
